components/Popper/Popper.css
.ztopia-popper {
  padding: 0;
  line-height: inherit;
  background-color: transparent;
  opacity: 1;
  transition: $transition-fast;

  &--top,
  &--top-left,
  &--top-right {
    .rc-tooltip-arrow {
      border-top-color: $black-dark;
    }
  }

  &--right,
  &--right-top,
  &--right-bottom {
    .rc-tooltip-arrow {
      border-right-color: $black-dark;
    }
  }

  &--bottom,
  &--bottom-left,
  &--bottom-right {
    .rc-tooltip-arrow {
      border-bottom-color: $black-dark;
    }
  }

  &--left,
  &--left-top,
  &--left-bottom {
    .rc-tooltip-arrow {
      border-left-color: $black-dark;
    }
  }

  .rc-tooltip-inner {
    min-height: unset;
    padding: $spacing-xs $spacing-s;
    color: $black-dark;
    background-color: $white-light;
    border-color: $black-dark;
  }

  /*==================================
  =            Transition            =
  ==================================*/
  &.appear {
    opacity: 0.01;

    &.appear-active {
      transform: translate(0, 0);
      opacity: 1;
    }
  }

  &.enter {
    opacity: 0.01;

    &.enter-active {
      transform: translate(0, 0);
      opacity: 1;
    }
  }

  &.leave {
    opacity: 1;

    &.leave-active {
      opacity: 0.01;
    }
  }

  &--top,
  &--top-left,
  &--top-right {
    &.appear,
    &.enter {
      transform: translateY(-$spacing-l);
    }

    &.leave {
      transform: translateY(-$spacing-l);
    }
  }

  &--right,
  &--right-top,
  &--right-bottom {
    &.appear,
    &.enter {
      transform: translateX($spacing-l);
    }

    &.leave {
      transform: translateX($spacing-l);
    }
  }

  &--bottom,
  &--bottom-left,
  &--bottom-right {
    &.appear,
    &.enter {
      transform: translateY($spacing-l);
    }

    &.leave {
      transform: translateY($spacing-l);
    }
  }

  &--left,
  &--left-top,
  &--left-bottom {
    &.appear,
    &.enter {
      transform: translateX(-$spacing-l);
    }

    &.leave {
      transform: translateX(-$spacing-l);
    }
  }
  /*=====  End of Transition  ======*/
}

